# RookeryOS

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE.md.old  CREDITS.md  KDE-PLASMA-BUILD-ORDER.md  LICENSE  Makefile  PACKAGES.txt  QUICKSTART.md  README.md  WEB_INTERFACE.md  build.sh  docker-compose.yml  easylfs  oobe.sh  rookery  setup.sh  tier7-sources.txt  wsl-distribution.conf  wsl.conf
.beads/: issues.jsonl
.claude/: settings.local.json
docs/: package-manager-design.md
etc/profile.d/: 00-pathfuncs.sh
etc/rookpkg/hooks.d/: 10-ldconfig.hook  20-update-desktop-database.hook  20-update-mime-database.hook  30-update-icon-cache.hook  40-glib-compile-schemas.hook  50-systemd-daemon-reload.hook  README  (+2 more)
rookpkg/: Cargo.toml  rookpkg.rook
rookpkg/src/: archive.rs  build.rs  config.rs  database.rs  error.rs  hooks.rs  main.rs  package.rs  repository.rs  signing.rs  spec.rs  transaction.rs
rookpkg/src/cli/: autoremove.rs  build.rs  delta.rs  info.rs  inspect.rs  install.rs  keygen.rs  keys.rs  list.rs  mod.rs  remove.rs  repo.rs  search.rs  update.rs  upgrade.rs  verify.rs
services/build-basesystem/: Dockerfile
services/build-blfs/: Dockerfile
services/build-kernel/: Dockerfile
services/build-toolchain/: Dockerfile
services/common/: README.md  checkpointing.sh  logging.sh
services/configure-system/: Dockerfile
services/download-sources/: Dockerfile
services/lfs-web-screen/: Dockerfile
services/lfs-web-terminal/: Dockerfile
services/package-image/: Dockerfile
services/rookery-web-screen/: Dockerfile
services/rookery-web-terminal/: Dockerfile
tests/: Dockerfile  README.md
tests/scripts/: boot_test.sh  quick_test.sh  system_commands_test.sh  test_pipeline.sh  test_runner.sh  test_service.sh  validate_volumes.sh
(+14 files in other folders)
